explicit teaching or not

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -514,6 +514,11 @@ This research strand originates in the field of human-computer interaction [@eri
 
 #### GDP as the germ cell of this research
 
+ON THE PROCESS OF THIS Study
+HOW THIS IS A USEFUL PRODUCT -> AS PER dbr
+HOW ALSO AN EMERGENT GERM CELL. An experiment, open ended.
+As such, the emergence of a collection GDPs was not known before the process of working with participants began. Uncertaintly in research. A quick reflection of its value. 
+
 The following section makes a parallel between the utility of germ cell concepts and so-called strong concepts or intermediate knowledge in design theory [@hook_strong_2012; @barendregt_intermediate-level_2018].
 
 MOVE
