--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -756,6 +756,11 @@ More general talk on the complexity of programming and the and
 
 The culture or hardness merits a separate section.
 
+
+**Fluency and fluidity in practice**
+
+Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+
 **Moved section on norms**
 
 There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Madiha directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
@@ -798,14 +803,14 @@ This section begins an interpretation of the diverse roles of GDPs in the game-m
 The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram). This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools, a discussion of which forms a significant part of the following chapter.
 
 
-IS THIS FOR HERE?
-
 The following diagram shows complexity of activity
 The games can be seen as boundary objects for complex, and expanded objects of activity.
 This incorporates diverse motivations, examples of which are above including but not limited to incorporting home intersts, supporting children, increasing coding skills, playful interaction,
 
 GDPs are used in diverse ways as mediational tools to support those aims.
 The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration.
+
+SOMEHOW REFERENCE TABLE ABOVE IN RELATION TO THE DIVERSE MOTIVATIONS / MEDIATION STRATEGIES IN ILLUSTRATION BELOW.
 
 ![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%}
 
@@ -816,58 +821,55 @@ Illustration 6.x - Diverse mediational strategies and complex object of activity
 
 <!-- NOTE To restructure. -->
 
-Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the flexible design practices were present above data.
+Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the diversity of motivational aspects and resulting impact on diverse goal formation ( & flexible design practices) present in the findings of this chapter.
 
+One of these motivational factors is remaining engaged or in flow.
 Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
 
 Chapter 2 also  explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
 By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
 
-The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
+
 
 As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
 
 
-SPACE ABOVE - THE SUMMARISE?
-Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
-
-
-
-
-MOVE?
-In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
-
-Fluency is one candidate.
-
+- via instrumental coding competency needed to make changes effectively with or without supporting documentation
+- from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
+- via expression of creative or significant ideas in constructing digital products   
 
 What can be observed about the interaction of participants use of GDPs and the experience of participant fluency.
 
-Chapter 2 introduced varied forms of fluency
-
-MOVE OR COMPRESS?
 
 
 <!-- The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts. -->
 
+### Link section
 
+Returning to the gaps in research outline in Chapter 2...
 
+- limtations of fluency as a concept - thus agency
+- lack of pedagogies for fluency in a socio-cultural plane
+-
 
+**limitation of fluency as a concepts**
 
-**Discussion on designing for fluency**
+MOVE REFLECTIONS HERE.
+
+**Discussion on gap in designing for (either) fluency or agency**
+
+The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
 
 NOTE THIS SHOULD BE LIMITED AS EXPLORED LATER TOO. FLUENCY NOT AGENCY / MAKE A DISTINCTION/ - OR PERHAPS REMOVE.
 
+MOVE / COMPRESS - TO LR? MAKE LINK THERE? POTENTIAL OF GDP MENU? THIS EMERGED THO - SO WHERE TO PLACE IT? AT END OF CHAPTER 5? TELL THE STORY OF EVOLUTION IN DISCUSSION? 
+
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
+MOVE / COMPRESS - NOT VERY DIRECT YET
+In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
 
-**Identifying characteristics of fluency**
-
-
-In summative terms fluency can be seen in the mediational strategies outlined in this chapter in the following ways.
-
-- via instrumental coding competency needed to make changes effectively with or without supporting documentation
-- from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
-- via expression of creative or significant ideas in constructing digital products   
+Fluency as a component characteristic of agency via use of diverse mediational strategies is explored in Chapter 7.
 
 
 <!-- - as a means of identity formation in groups and collectives [@gee_chapter_2000]
